force-app/main/default/objects/Consultorio__c/Consultorio__c.object-meta.xml
<CustomObject>
    <label>Consultorio</label>
    <nameField>
        <label>Nombre de Consultorio</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Consultorios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>