force-app/main/default/objects/Consultorio__c/fields/Cod_Pami__c.field-meta.xml
<CustomField>
    <fullName>Cod_Pami__c</fullName>
    <label>Cod Pami</label>
    <length>255</length>
    <type>Text</type>
</CustomField>