force-app/main/default/objects/Consultorio__c/fields/Codigo_efector__c.field-meta.xml
<CustomField>
    <fullName>Codigo_efector__c</fullName>
    <formula>Efector_Prestador__r.Codigo_de_efector__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Codigo efector</label>
    <type>Text</type>
</CustomField>