force-app/main/default/objects/Consultorio__c/fields/Codigo_externo__c.field-meta.xml
<CustomField>
    <fullName>Codigo_externo__c</fullName>
    <label>Código externo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>