force-app/main/default/objects/Consultorio__c/fields/Cons__c.field-meta.xml
<CustomField>
    <fullName>Cons__c</fullName>
    <label>Cons</label>
    <length>255</length>
    <type>Text</type>
</CustomField>