force-app/main/default/objects/Consultorio__c/fields/Consultorio_Diabetes__c.field-meta.xml
<CustomField>
    <fullName>Consultorio_Diabetes__c</fullName>
    <label>Consultorio Diabetes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>V</fullName>
            </value>
            <value>
                <fullName>S</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>