force-app/main/default/objects/Consultorio__c/fields/Convenio__c.field-meta.xml
<CustomField>
    <fullName>Convenio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Convenio</label>
    <referenceTo>Convenio__c</referenceTo>
    <relationshipLabel>Consultorios</relationshipLabel>
    <relationshipName>Consultorios</relationshipName>
    <type>Lookup</type>
</CustomField>