force-app/main/default/objects/Consultorio__c/fields/Cuit__c.field-meta.xml
<CustomField>
    <fullName>Cuit__c</fullName>
    <label>Cuit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>