force-app/main/default/objects/Consultorio__c/fields/Efector_Prestador__c.field-meta.xml
<CustomField>
    <fullName>Efector_Prestador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Efector/Prestador</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Consultorios</relationshipLabel>
    <relationshipName>Consultorios</relationshipName>
    <type>Lookup</type>
</CustomField>