force-app/main/default/objects/Consultorio__c/fields/Farmacia_Leches__c.field-meta.xml
<CustomField>
    <fullName>Farmacia_Leches__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Farmacia Leches</label>
    <type>Checkbox</type>
</CustomField>