force-app/main/default/objects/Consultorio__c/fields/Fecha_desde_Usuario__c.field-meta.xml
<CustomField>
    <fullName>Fecha_desde_Usuario__c</fullName>
    <label>Fecha desde Usuario</label>
    <type>Date</type>
</CustomField>