force-app/main/default/objects/Consultorio__c/fields/Fecha_hasta_Usuario__c.field-meta.xml
<CustomField>
    <fullName>Fecha_hasta_Usuario__c</fullName>
    <label>Fecha hasta Usuario</label>
    <type>Date</type>
</CustomField>