force-app/main/default/objects/Consultorio__c/fields/Fecha_vigencia__c.field-meta.xml
<CustomField>
    <fullName>Fecha_vigencia__c</fullName>
    <label>Fecha Vigencia</label>
    <type>Date</type>
</CustomField>