force-app/main/default/objects/Consultorio__c/fields/Firma__c.field-meta.xml
<CustomField>
    <fullName>Firma__c</fullName>
    <label>Firma</label>
    <length>255</length>
    <type>Text</type>
</CustomField>