force-app/main/default/objects/Consultorio__c/fields/Horarios__c.field-meta.xml
<CustomField>
    <fullName>Horarios__c</fullName>
    <label>Horarios</label>
    <length>255</length>
    <type>Text</type>
</CustomField>