force-app/main/default/objects/Consultorio__c/fields/Mail__c.field-meta.xml
<CustomField>
    <fullName>Mail__c</fullName>
    <label>Mail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>