force-app/main/default/objects/Consultorio__c/fields/Matri__c.field-meta.xml
<CustomField>
    <fullName>Matri__c</fullName>
    <label>Matri</label>
    <length>255</length>
    <type>Text</type>
</CustomField>