force-app/main/default/objects/Consultorio__c/fields/Tipo_Mat__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Mat__c</fullName>
    <label>Tipo Mat</label>
    <length>255</length>
    <type>Text</type>
</CustomField>